# guide

./: Cargo.toml  README.md
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
src/: main.rs
